# Django-HTMX-Docker-Template

./: README.md  compose.yaml
app/: Dockerfile  manage.py  populate_contacts.py  pyproject.toml
app/htmx_project/: asgi.py  settings.py  wsgi.py
app/showcase/: admin.py  forms.py  models.py  urls.py  views.py
app/showcase/migrations/: 0001_initial.py
app/showcase/templates/: active_search.html  base.html  click_to_load.html  form_submit.html  index.html  infinite_scroll.html  modal.html  table_sort.html
app/showcase/templates/partials/: contact_list.html  contact_modal.html  contact_page.html  contact_search_results.html  form_errors.html  more_content.html  sorted_contacts.html
